* BUGFIX: Setting gttlvgrep (in case of '-r') and gttlvwrap stdout mode to binary.
* BUGFIX: Grep is grepping invalid content.
* BUGFIX: Setting gttlvdump stdin mode to binary.
* BUGFIX: Fixed description for metadata padding TLV type in right link (0801.08.04.1E).
* IMPROVEMENT: Support for KSIAP and KSIEP PDU version 2.
* IMPROVEMENT: Added -D for specifying description file directory.
* IMPROVEMENT: Added -o for overriding default description files.
* IMPROVEMENT: Added -i for ignoring default description files.

Version 1.0

2016-10-13 1.0.264

* FEATURE: Added HMAC calculation handling to gttlvundump.
* IMPROVEMENT: Added a parameter to -w for wrapping the long byte strings to a specified width.
* IMPROVEMENT: Default time format is set to GMT+00. To express time in local timezone use -t option.
* IMPROVEMENT: Added automated tests.
* IMPROVEMENT: Man pages gttlvdump(1), gttlvgrep(1), gttlvundump(1), gttlvwrap(1), tlv(5) and tlv-desc(5) added to the project.
* IMPROVEMENT: Help format changed.
* BUGFIX: Hex strings must contain even number of characters.
* BUGFIX: Typos fixed.
* BUGFIX: Windows installer contains missing file ksie.desc.


Version 0.3

* IMPROVEMENT: The gttlvwrap accepts only hex as tag values.
* BUGFIX: An empty composite element is no longer reported as not a composite element.
* FEATURE: Added gttlvundump.
* FEATURE: Included gttlvwrap into main build.
* IMPROVEMENT: Added help to gttlvwrap.
* BUGFIX: Added parse verification to known composite tags.

2016-02-05 0.3.64

* FEATURE: Added gttlvgrep.
* IMPROVEMENT: Added option to display payload raw values as base64.
* IMPROVEMENT: Versioning changes.
* BUGFIX: Added safeguard for time printing.
* BUGFIX: Windows build copies .desc files from src to bin dir.