@@ -2,6 +2,7 @@
 #define COMMON_H_
 
 #include <stdlib.h>
+#include <stddef.h>
 
 #ifdef __cplusplus
 extern "C" {
@@ -11,10 +12,6 @@ extern "C" {
 #	ifndef snprintf
 #		define snprintf _snprintf
 #	endif
-#endif
-
-#ifndef _SIZE_T_DEFINED
-	typedef unsigned long long size_t;
 #endif
 
 #define GT_TLV_MASK_TLV16 0x80u
